[package]
name = "glg-middle-tier"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.0.1", features = ["rustls"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0"
actix-cors = "0.6.1"
env_logger = "0.9.0"
rustls = "0.20.4"
rustls-pemfile = "1.0.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]